# stereo_dense_mapping

./: README.md
src/: multi_ugv.sh  outdoor4_ugv.launch
src/VINS-Fusion/: README.md  result.csv  vio_loop.csv
src/VINS-Fusion/MH_01/: demo.csv  demo.txt  loop.csv  mul_loop.csv  mulresult.csv  new.csv  ori_result.csv  ori_vio_loop.csv  result.csv  vio_loop_iris_1.csv
src/VINS-Fusion/MH_02/: MH02.txt  MH02单一.csv  mulresult.csv  new_loop_.csv  ori_result.csv  ori_vio_loop.csv  result.csv  vio_loop_iris_1.csv
src/VINS-Fusion/MH_02/demo2/: result.csv  result2.csv  vio_loop_iris_1.csv  vio_loop_iris_2.csv
src/VINS-Fusion/MH_03/: MH03.txt  ori_result.csv  ori_vio_loop.csv  vio_loop2.csv  vio_loop_iris_1.csv  vio_loop_iris_2.csv
src/VINS-Fusion/V2_02_medium/: loop_result.csv  result.csv  vio_loop.csv  vio_loop2.csv
src/VINS-Fusion/config/: bag_config.rviz  multi_iris.rviz  multi_ugv_config.rviz  vins_rviz_config.rviz
src/VINS-Fusion/config/euroc/: euroc_stereo_imu_config.yaml  euroc_stereo_imu_config2.yaml  multi_euroc_stereo_imu_config.yaml
src/VINS-Fusion/config/mynteye/: mynteye_stereo_config(复件).yaml  t265(复件).yaml  t265.yaml
src/VINS-Fusion/config/xtdrone_sitl/: cam0_fisheye.yaml  cam1_fisheye.yaml  fisheye_stereo_config.yaml  multi_ugv_stereo_imu_config.yaml  px4_sitl_stereo_config.yaml  ugv0_sitl_stereo_config.yaml  ugv1_sitl_stereo_config.yaml  ugv2_sitl_stereo_config.yaml
src/VINS-Fusion/global_fusion/src/: globalOptNode.cpp
src/VINS-Fusion/loop_fusion/: CMakeLists.txt
src/VINS-Fusion/loop_fusion/launch/: loop.launch
src/VINS-Fusion/loop_fusion/src/: FeatureMatching.cpp  FeatureMatching.h  demo.cpp  keyframe.cpp  keyframe.h  keyframe_iris2.cpp  orb_extractor.cpp  orb_extractor.h  original_keyframe.cpp  original_keyframe.h  original_pose_graph.h  original_pose_graph_node.cpp  pose_graph.cpp  pose_graph.h  pose_graph_iris2.cpp  pose_graph_node.cpp  pose_graph_node_iris2.cpp  pose_graph_node_ugv.cpp  pose_graph_ugv.cpp
src/VINS-Fusion/loop_fusion/src/copy/: keyframe(复件).cpp  original_keyframe.cpp  original_keyframe.h  original_pose_graph.cpp  pose_graph(复件).cpp
src/VINS-Fusion/vins_estimator/: CMakeLists.txt
src/VINS-Fusion/vins_estimator/launch/: database.launch  multi_eye.launch  multi_iris.launch  multi_ugv_slam.launch  multi_vins_rviz.launch  rtabmap_stereo.launch  vins_bag.launch
src/VINS-Fusion/vins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp
src/VINS-Fusion/vins_estimator/src/estimator/: estimator.cpp  estimator.h  estimator_ugv.cpp  estimator_ugv2.cpp  feature_manager.cpp  original_estimator.cpp
src/VINS-Fusion/vins_estimator/src/featureTracker/: feature_tracker.cpp
src/VINS-Fusion/vins_estimator/src/utility/: original_visualization.cpp  original_visualization2.cpp  visualization(复件).cpp  visualization.cpp  visualization_ugv.cpp  visualization_ugv2.cpp
src/catvehicle/launch/: catvehicle.launch  display_catvehicle.launch  gmapping.launch
src/catvehicle/urdf/: catvehicle.gazebo  catvehicle1-3(复件).xacro  catvehicle1-3.xacro  catvehicle4-6.xacro  catvehicle_fish.xacro  catvehicle_laser_points.gazebo  catvehicle_triclops.gazebo  catvehicle_triclops2.gazebo  catvehicledemo.xacro
